--- a/src/app/shared/components/modal/modal.component.html
+++ b/src/app/shared/components/modal/modal.component.html
@@ -58,6 +58,15 @@
                         <p class="text-sm text-gray-300 whitespace-pre-line leading-relaxed">
                             {{ modalService.options()?.message }}
                         </p>
+                        <!-- 🔥 Input for Prompt -->
+                        @if (modalService.options()?.isPrompt) {
+                        <div class="mt-4">
+                            <input [type]="modalService.options()?.inputType || 'text'"
+                                [placeholder]="modalService.options()?.placeholder || ''" [(ngModel)]="localInputValue"
+                                (keyup.enter)="confirm()"
+                                class="w-full rounded-md border-0 bg-white/5 py-1.5 text-white shadow-sm ring-1 ring-inset ring-gray-700 focus:ring-2 focus:ring-inset focus:ring-indigo-500 sm:text-sm sm:leading-6 px-3">
+                        </div>
+                        }
                     </div>
                 </div>
             </div>
